...
    <string formatted="false" name="stage">Stage</string>
    <string formatted="false" name="play">Play</string>
    <string formatted="false" name="settings">Settings</string>
    <string formatted="false" name="redo">Redo</string>
    <string formatted="false" name="undo">Undo</string>

    <string formatted="false" name="new_option">new…</string>
    <string formatted="false" name="edit_option">edit…</string>

    <string formatted="false" name="confirm">Confirm</string>
    <string formatted="false" name="ignore">Ignore</string>
    <string formatted="false" name="cancel">Cancel</string>
    <string formatted="false" name="save">Save</string>
    <string formatted="false" name="help">Help</string>

    <string formatted="false" name="discard">Discard</string>

    <string formatted="false" name="next">Next</string>

    <string formatted="false" name="ok">OK</string>
    <string formatted="false" name="done">Done</string>
    <string formatted="false" name="close">Close</string>

    <string formatted="false" name= "assistant">Assistant</string>

    <string formatted="false" name="yes">Yes</string>
...

    <string formatted="false" name="list_headline_sprites">Actors and objects</string>

    <!-- Options Menu Options -->
    <string formatted="false" name="backpack">Backpack</string>
    <string formatted="false" name="copy">Copy</string>
    <string formatted="false" name="delete">Delete</string>
    <string formatted="false" name="rename">Rename</string>
    <string formatted="false" name="merge">Merge</string>
    <string formatted="false" name="show_details">Show details</string>
    <string formatted="false" name="hide_details">Hide details</string>
    <string formatted="false" name="project_options">Project options</string>
    <string formatted="false" name="from_local">Add from local</string>
    <string formatted="false" name="sort_projects">Sort</string>
...

    <!-- Rename Dialog Titles -->
    <string formatted="false" name="rename_project">Rename project</string>
    <string formatted="false" name="rename_scene_dialog">Rename scene</string>
    <string formatted="false" name="rename_sprite_dialog">Rename actor or object</string>
    <string formatted="false" name="rename_look_dialog">Rename look</string>
    <string formatted="false" name="rename_sound_dialog">Rename sound</string>
    <string formatted="false" name="rename_nfctag_dialog">Rename NFC tag</string>
    <string formatted="false" name="rename_data_dialog">Rename</string>

    <!-- New Script Group Dialog -->
    <string formatted="false" name="new_group">New group</string>
    <string formatted="false" name="default_group_name">Group</string>
...
    <string name="add_look_empty_object">Empty object</string>
    <string name="add_look_actors_and_object">Local actors and objects</string>
    <!--  -->

    <!-- NewSoundDialog -->
    <string formatted="false" name="new_sound_dialog_title">Add sound</string>
    <string formatted="false" name="add_sound_from_recorder">Record sound</string>
    <string formatted="false" name="add_sound_choose_file">Select file</string>
    <string formatted="false" name="add_sound_music">Music composer</string>
    <string formatted="false" name="add_sound_choose_sound">Sounds</string>

    <!-- NotePickerDialog -->
    <string formatted="false" name="note_picker_title">Note Picker</string>
...
    <string formatted="false" name="save_project_to_external_storage_io_exception_message">Failed to save project, not enough memory is available!</string>
    <!--  -->

    <!-- SoundRecorderActivity -->
    <string formatted="false" name="soundrecorder_name">Sound recorder</string>
    <string formatted="false" name="soundrecorder_error">Sound recording failed</string>
    <string formatted="false" name="soundrecorder_recorded_filename">recording</string>
    <string formatted="false" name="soundrecorder_text_view">Tap the icon above to start and stop recording.</string>
    <!--  -->

    <!-- Brick context dialog -->
    <string formatted="false" name="brick_context_dialog_move_brick">Move brick</string>
    <string formatted="false" name="brick_context_dialog_move_script">Move script</string>
...
