...
            android:id="@+id/brick_play_sound_text_view"
            style="@style/BrickText.SingleLine"
            android:text="@string/brick_play_sound">
        </TextView>

        <Spinner
            android:id="@+id/brick_play_sound_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textDirection="locale" />

    </com.myradev.lunarcode.ui.BrickLayout>

...
