...
        android:textSize="36sp" />

    <View
        android:id="@+id/soundrecorder_chronometer_bar"
        android:layout_width="225dp"
        android:layout_height="13dp"
        android:layout_above="@+id/soundrecorder_record_button"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/activity_text_view_margin_large"
        android:background="@color/button_border_top" />

    <com.myradev.lunarcode.soundrecorder.RecordButton
        android:id="@id/soundrecorder_record_button"
...
